--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -1,113 +1,128 @@
-.hero{
-   position: relative;
+/* 
+.console-div {
+  display: flex;        
+  height: 100vh;
+  width: 100%;
+  position: fixed;
 }
-.banner-img{
-    width: 100%;
-    mask-image: linear-gradient(to right, transparent, black 75%);
-}
-.hero-caption{
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    padding-left:6% ;
-}
-.caption-img{
-    width: 90%;
-    max-width: 420px;
-    font-size: 30px;
-    margin-bottom: 20px;
-}
-.hero-caption p {
-    max-width: 700px;
-    font-size: 17px;
-}
-.hero-btns{
-    display: flex;
-    gap:10px;
-    margin-bottom: 50px;
-}
+.home {
+  flex: 1;            
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  background-color: rgb(33, 33, 33);
 
-.hero-btns .btn img{
-    width: 25px;
 }
-
-.hero-btns .btn{
-    border: 0;
-    outline: 0;
-    padding: 8px 20px;
-    display: inline-flex;
+.search-div{
+    width: 55%;
+    min-width: 500px;
+    height: 70px;
+    border-radius: 5rem;
     align-items: center;
-    gap: 10px;
-    font-size: 15px;
-    font-weight: 600;
-    border-radius: 4px;
-    cursor: pointer;
-    background: white;
+    display: flex;
+    justify-content: center;
+    background: rgba(64, 64, 64, 0.543);
+    margin: auto;
+    border: 0.9px solid rgba(255, 255, 255, 0.412);
+    box-shadow: 0 0 4px 0.1px rgba(255, 255, 255, 0.396);
+}
+.search-div  .fa-robot{
+  font-size: larger;
+  margin-right: 5px;
 }
 
-.hero-btns .btn.dark-btn{
-    color: #fff;
-    background: #6d6d6eb3;
+.search-div input{
+    outline: none;
+    border: none;
+    width: 70%;
+    padding: 8px 20px;
+    outline: none;
+    background: transparent;
+    font-size: medium;
+    color: white;
+}
+.logout{
+height: 20px ;
+width: 40px;
 }
 
-.hero-btns .btn:hover{
-    background: #ffffffbf;
+.search-div button{
+    outline: none;
+    border: none;
+    padding: 6px 8px;
+    border-radius: 50%;
+    margin-left: 2rem;
 }
+
+
+
+.console{
+    height: 85%;
+    min-width: 400px;
+    overflow-y: auto;
+    scroll-behavior: smooth;
+    scrollbar-width: none;
+    margin: 0 15% 0 15%;
+}
+
+.img-continer img{
+  height: 40px;
+  width: 40px;
+  margin: 14px -5px 0 0;
+}
+.cover-div {
+  display: flex;
+  width: 98%;
+  margin: 35px auto;
+}
+
+.bot-bubble {
+  display: inline-block;
+  word-wrap: break-word;
+  align-self: flex-start; 
+  line-height: 1.6;
+  font-size: 18px;
+  font-weight: 300;
+}
+
+
+.user-bubble {
+  padding: 10px 20px;
+  background-color: rgb(59, 63, 59);
+  display: inline-block;
+  border-radius: 24px 24px 0 24px;
+  max-width: 70%;
+  word-wrap: break-word;
+  align-self: flex-end;    
+  margin-left: auto;   
+  margin-right: 50px;   
+}
+.console-div{
+  display: flex;
   
-.hero-btns .dark-btn:hover{
-    background: #6d6d6e66;
-}
-.more-cards{
-    padding-left: 6%;
 }
 
-@media (max-width: 1024px){
-    .hero-caption .title-cards{
-        display: none;
-    }
-    .hero-btns{
-        margin-bottom: 30px;
-    }
+.box {
+  padding: 20px;
+  border-radius: 10px;
+  width: fit-content; 
+  max-width: 93%;
+  box-sizing: border-box; 
 }
 
-@media (max-width: 800px){
-    .hero-caption {
-        padding-left: 4%;
-    }
-    .caption-img{
-        margin-bottom: 10px;
-        width: 40%;
-    }
-    .hero-caption p{
-        font-size: 12px;
-        margin-bottom: 10px;
-    }
-    .hero-btns .btn img{
-        width: 20px;
-    }
-    .more-cards{
-        padding-left:4% ;
-    }
+ .bot-bubble p {
+  margin: 5px 0 !important;   
 }
 
-@media (max-width: 500px){
-    .caption-img{
-        display: none;
-    }
-    .btn img{
-        width: 15px;
-    }
-    .hero-btns .btn{
-        padding:4px 10px;
-        gap: 5px;
-        font-size: 10px ;
-    }
+.bot-bubble ul{
+    margin-top: 5px; 
 }
+.bot-bubble li {
+  margin-left: 13px;
 
-
-
-
-
-
-
-
+} 
+.bot-bubble h3{
+  margin-top: 20px;
+  font-weight: 500;
+}
+*/
