--- a/src/pages/Login/Login.css
+++ b/src/pages/Login/Login.css
@@ -1,7 +1,10 @@
 .login{
     height: 100vh;
-    background-image: linear-gradient(#0000007e, #0000007e) ,url(/background_banner.jpg) ;
+   background-color: rgb(30,31,32);
     padding: 20px 8%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 .login-logo{
     width: 150px;
@@ -44,7 +47,7 @@
      border: 0;
      outline: 0;
      padding: 10px;
-     background: #e50914;
+     background: #4428e0;
      color: white;
      border-radius: 4px;
      font-size: 16px;
@@ -94,6 +97,12 @@
 .loading-spinner img{
     width: 60px;
 }
+.cross{
+    position: relative;
+    left: 100%;
+    cursor: pointer;
+    opacity: 0.4;
+}
 
 @media (max-width: 500px) {
     .login{
@@ -101,6 +110,6 @@
     }
     .login-form{
         padding: 20px;
-        margin-top: 30px;
+        margin-top: 40%;
     }
 }
